style/site/header/_header-stuck.scss
$size__header-height-stuck: 81px;

.site-header.stuck {
	position: fixed;
	top: 0;
	left: 0;
	right: 0;
	width: 100%;
	background: $color__background-header;
	z-index: 1;
	box-shadow: 0 0 3px rgba(0,0,0,.2);
	animation-name: sticky-header;
	animation-duration: .5s;
	animation-timing-function: ease-in-out;

	.top-header {
		display: none;
	}

	@media screen and (min-width: breakpoint('tablet-landscape')) {

		#main-navigation li.cta-item {
			height: $size__header-height-stuck;
			animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;

			a {
				display: block;
				line-height: normal;
				position: relative;
				top: 50%;
				transform: translateY(-50%);
			}

			.home & a {
				background: $color__background-button;
				padding: .5em .8em;
				border-radius: 8px;
				color: #fff;
			}
		}

		.site-branding img {
			height: 50px;
		}

		#main-navigation li a {
			line-height: $size__header-height-stuck;
		}
	}
}

@keyframes sticky-header {
	from {
		top: -50px;
	}
	to {
		top: 0;
	}
}

@keyframes shake {
	10%, 90% {
		transform: rotate(-1deg);
	}

	20%, 80% {
		transform: rotate(2deg);
	}

	30%, 50%, 70% {
		transform: rotate(-4deg);
	}

	40%, 60% {
		transform: rotate(4deg);
	}
}

